chore: cleanup with idea